--- a/ParentsSite/SantexFrontend/src/app/core/home/side-bar/side-bar.component.css
+++ b/ParentsSite/SantexFrontend/src/app/core/home/side-bar/side-bar.component.css
@@ -1,7 +1,7 @@
 @media (min-width: 768px){
     .sidebar {
         margin-top: 1px;
-        position: fixed;
+        position: absolute;
         top: 51px;
         bottom: 0;
         left: 0;
