--- a/ParentsSite/SantexFrontend/src/app/core/home/shared/dropdown/dropdown.component.css
+++ b/ParentsSite/SantexFrontend/src/app/core/home/shared/dropdown/dropdown.component.css
@@ -5,7 +5,7 @@ label{
 
 .dropdown{
     width: 120px;
-    position: relative;
+    position: relative;    
 }
 
 .open label{
@@ -32,6 +32,7 @@ ul{
     transition: top 0.2s ease-in, opacity 0.2s ease-out;
     max-height: 75px;
     overflow: auto;
+    z-index: 1000;
 }
 
 .open div>ul{
