--- a/ParentsSite/SantexFrontend/src/app/core/home/side-bar/side-bar.component.html
+++ b/ParentsSite/SantexFrontend/src/app/core/home/side-bar/side-bar.component.html
@@ -3,7 +3,7 @@
     <li routerLinkActive="active"><a routerLink='./products'>Товары</a></li>
     <li><a>Категории товаров</a></li>
     <li><a>Поставщики</a></li>
-    <li><a>Производители</a></li>
+    <li routerLinkActive="active"><a routerLink='./manufactures'>Производители</a></li>
     <li><a>Покупки</a></li>
     <li><a>Доставки</a></li>
   </ul>
