--- a/ParentsSite/SantexFrontend/src/app/core/home/products/product/product.component.html
+++ b/ParentsSite/SantexFrontend/src/app/core/home/products/product/product.component.html
@@ -1,4 +1,4 @@
-<h2>Добавить продукт</h2>
+<h2>Добавление продукта</h2>
 
 <form (ngSubmit)="addProduct()" [formGroup]="productForm">
   <div class="row">
